[gd_scene load_steps=19 format=3 uid="uid://d0nk2tnjt4nfh"]

[ext_resource type="Script" path="res://assets/scripts/enemies/enemy.gd" id="1_8l5wi"]
[ext_resource type="Resource" uid="uid://73gucalk24fs" path="res://assets/resources/enemies/ranged_skeleton.tres" id="2_7pu6r"]
[ext_resource type="PackedScene" uid="uid://c5oj53s80lw1c" path="res://scenes/components/hitbox.tscn" id="3_60mma"]
[ext_resource type="SpriteFrames" uid="uid://b6tsfs76tcrb1" path="res://assets/animations/skeleton_animation.tres" id="3_w30yt"]
[ext_resource type="PackedScene" uid="uid://ydoamsvkvmjd" path="res://scenes/components/health_component.tscn" id="4_i88yj"]
[ext_resource type="SpriteFrames" uid="uid://cawxta7v7inqw" path="res://assets/animations/bow_animation.tres" id="4_riynd"]
[ext_resource type="PackedScene" uid="uid://ckf187c4wqwck" path="res://scenes/components/movement_component.tscn" id="5_jdqjc"]
[ext_resource type="Script" path="res://assets/scripts/enemies/enemy_states/enemy_exploring_state.gd" id="7_vwvb0"]
[ext_resource type="PackedScene" uid="uid://d1bxw1ae03fmi" path="res://scenes/components/status_effects_component.tscn" id="8_p86yj"]
[ext_resource type="Script" path="res://assets/scripts/enemies/enemy_states/enemy_dead_state.gd" id="8_qote8"]
[ext_resource type="Script" path="res://assets/scripts/states/state_machine.gd" id="9_4k7gg"]
[ext_resource type="Script" path="res://assets/scripts/enemies/enemy_states/enemy_attacking_state.gd" id="9_6ro1r"]
[ext_resource type="Script" path="res://assets/scripts/enemies/enemy_states/enemy_repositioning_state.gd" id="11_r5io2"]
[ext_resource type="Script" path="res://assets/scripts/enemies/enemy_states/enemy_engaging_target_state.gd" id="12_dhsmo"]
[ext_resource type="Script" path="res://assets/scripts/states/stunned_state.gd" id="13_2brf7"]
[ext_resource type="Script" path="res://assets/scripts/enemies/enemy_states/enemy_idle_state.gd" id="14_xatvo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ecyxy"]
radius = 2.0
height = 8.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ste6r"]
radius = 4.0
height = 16.0

[node name="RangedSkeleton" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_8l5wi")
data = ExtResource("2_7pu6r")

[node name="Animations" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = ExtResource("3_w30yt")
animation = &"die"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_ecyxy")

[node name="Hand" type="Node2D" parent="."]
position = Vector2(4, 0)

[node name="AttackRange" type="RayCast2D" parent="Hand"]
unique_name_in_owner = true
position = Vector2(-4, 0)
target_position = Vector2(90, 0)
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="Bow" type="AnimatedSprite2D" parent="Hand/AttackRange"]
position = Vector2(4, 0)
scale = Vector2(0.7, 0.7)
sprite_frames = ExtResource("4_riynd")
animation = &"attack"

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -20.0

[node name="Hitbox" parent="." instance=ExtResource("3_60mma")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_ste6r")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("character_sprite", "node") instance=ExtResource("4_i88yj")]
unique_name_in_owner = true
character_sprite = NodePath("../Animations")
node = NodePath("..")
starting_health = 3.0

[node name="MovementComponent" parent="." node_paths=PackedStringArray("character", "character_sprite") instance=ExtResource("5_jdqjc")]
character = NodePath("..")
character_sprite = NodePath("../Animations")

[node name="StatusEffectsComponent" parent="." instance=ExtResource("8_p86yj")]

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("9_4k7gg")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("14_xatvo")

[node name="Repositioning" type="Node" parent="StateMachine"]
script = ExtResource("11_r5io2")

[node name="RepositionCooldown" type="Timer" parent="StateMachine/Repositioning"]
wait_time = 0.5
one_shot = true

[node name="Engaging" type="Node" parent="StateMachine"]
script = ExtResource("12_dhsmo")

[node name="Exploring" type="Node" parent="StateMachine"]
script = ExtResource("7_vwvb0")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("8_qote8")

[node name="DeathTimer" type="Timer" parent="StateMachine/Dead"]
one_shot = true

[node name="Attacking" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack_animation_player")]
script = ExtResource("9_6ro1r")
attack_animation_player = NodePath("")

[node name="AttackCooldownTimer" type="Timer" parent="StateMachine/Attacking"]
one_shot = true

[node name="AttackTimer" type="Timer" parent="StateMachine/Attacking"]
one_shot = true

[node name="Stunned" type="Node" parent="StateMachine"]
script = ExtResource("13_2brf7")

[connection signal="timeout" from="StateMachine/Dead/DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="StateMachine/Attacking/AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
[connection signal="timeout" from="StateMachine/Attacking/AttackTimer" to="StateMachine/Attacking" method="handle_attack"]
